<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DustIQ_Standard" Id="{914987ba-2f4e-4000-85de-206365152723}">
    <Declaration><![CDATA[TYPE DustIQ_Standard :
STRUCT
	MesData : DustIQ ; (* Child struct  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>